2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* getopt.c [WIN32 && ! __CYGWIN__]: Use __CYGWIN__ instead of
	__CYGWIN32__ which is deprecated and may be removed.
	Mail from Ken Brown <kbrow1i@gmail.com>, Tue, 24 Jul 2012.

2012-07-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mingw32.h (win32_popen): Static inline wrapper for _popen()
	to use always binary mode.

2012-07-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: rewrite kpathsea_win32_popen to use always binary
	mode.

2012-07-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (libkpathsea_la_SOURCES): Skip compilation of
	xfseeko.c and xftello.c for MSVC.
	* win32lib.h: Drop xfseeko() and xftello() prototypes, they will
	subsequently be defined in lib.h.

2012-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 6.1.0 => 6.1.1dev.

2012-05-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: rewrite win32_system.

2012-05-22  Karl Berry  <karl@tug.org>

	* mktexmf: test $name for csso12*, not $rootname.
	From Debian via Norbert, 21 May 2012 10:11:08.

2012-05-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cnf.[ch]: Add KPSEDLL to kpathsea_cnf_get(), and reintroduce
	kpse_cnf_get().
	* Makefile.am: Do install cnf.h.

2012-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (rebuild): Depend on 'all-am' instead of 'all' to
	avoid an infinite loop.

2012-05-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* win32lib.[ch]: Copyright 2012.

2012-05-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: rewrite xftell64 for W32.

2012-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: rewrite xftell64 and xfseek64 for W32.

2012-04-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: further rewrite win32_system().

2012-04-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (rebuild): Touch libkpathsea.la to avoid an
	infinite loop when only mingw32.h or win32lib.h is changed.
