@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl   Copyright (C) 2009-2011 Peter Breitenlohner <tex-live@tug.org>
+dnl   Copyright (C) 2009-2012 Peter Breitenlohner <tex-live@tug.org>
 dnl
 dnl   This file is free software; the copyright holder
 dnl   gives unlimited permission to copy and/or distribute it,
@@ -33,6 +33,8 @@ m4_foreach([Kpse_Mktex], [kpse_mktex_opts],
 
 # So we can use reasonable awk in the Makefile.
 AC_PROG_AWK
+
+AC_CHECK_SIZEOF([long])
 
 dnl Replacement functions that may be required on ancient broken system.
 AC_CHECK_DECLS([putenv, strstr])
