@@ -1,5 +1,11 @@
 2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
+	* configure.ac: Add AC_CHECK_SIZEOF([long]).
+	* types.h: #include <inttypes.h> and <stdint.h> if they exist.
+	If necessary #define PRId64 & Co.
+
+2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
 	* getopt.c [WIN32 && ! __CYGWIN__]: Use __CYGWIN__ instead of
 	__CYGWIN32__ which is deprecated and may be removed.
 	Mail from Ken Brown <kbrow1i@gmail.com>, Tue, 24 Jul 2012.
